DirOutput/objects/Shift_Plan__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Shift_Name__c</fullName>
        <label>Shift Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Shift Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shift_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Shift-{0000}</displayFormat>
        <label>Shift Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>